fixed double scroll in Espardha & About Us

--- a/frontend/src/components/LandingPages/Espardha/Espardha.module.css
+++ b/frontend/src/components/LandingPages/Espardha/Espardha.module.css
@@ -1,6 +1,17 @@
 /* General Layout */
 @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anta&family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Hahmlet:wght@100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
+body {
+  background-image: url('hero-bg1-blur.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
+}
+
 .title {
   width: 100%;         /* or whatever container width */
   height: 166px;       /* the "line height" container you want */
